<resources>
    <string name="app_name">MahuWah</string>
    <string name="noti_channel_default">default</string>
    <string name="noti_channel_second">second</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintName">Name</string>
    <string name="hintNumber">Number</string>
    <string name="strAddRecord">Submit</string>
    <string name="strUpdateRecord">Update Record</string>
    <string name="warn_required_name">Please enter name</string>
    <string name="warn_required_number">Please enter number</string>
    <string name="strDeleteRecord">Delete Record</string>
    <string name="masala_unit">Spices</string>
    <string name="kahakhara_unit">Khakhara</string>
    <string name="bakery_unit">Coockies</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Add Record</string>
    <string name="menu_gallery">Display Record</string>
    <string name="menu_slideshow">Select Unit</string>
    <string name="menu_tools">Logout</string>
    <string name="hintDate">Enter Date</string>
    <string name="hintCustomerName">Enter Customer Name</string>
    <string name="hintItemName">Enter Product Name</string>
    <string name="hintRemark">Enter Remark...</string>
    <string name="hintPaymentBy">Enter Payment By cash or cheque</string>
    <string name="hintInvoiceNumber">Enter Invoice Number</string>
    <string name="hintTotalAmt">Enter Total Amount</string>
    <string name="hintRate">Enter Rate Of Product</string>
    <string name="hintQty">Enter Product Quantity</string>
    <string name="strSubmitUnit">Submit Unit</string>
    <string name="alertMessageForDeleteItem">Are you sure you want to delete this Record?</string>
    <string name="alertYes">YES</string>
    <string name="alertNo">No</string>
    <string name="warn_enter_date">Please select any date.</string>
    <string name="warn_required_cutname">Please enter customer name.</string>
    <string name="warn_paymentby">Please select payment by method name.</string>
    <string name="warn_invoice">Please enter invoice number</string>
    <string name="warn_totalamt">Please enter total amount.</string>
    <string name="warn_rate">Please enter rate amount.</string>
    <string name="warn_qty">Please enter product quantity.</string>
    <string name="warn_productname">Select Product Name</string>
    <string name="warn_payment_by_method">Select Payment By Method</string>
    <string name="welcome_text">Welcome to Gram Nirman Samaj Income Generation System</string>
    <string name="hint_password">Enter password</string>
    <string name="strLogin">Login</string>
    <string name="please_wait">Please wait...</string>
    <string name="warn_enter_password">Please enter password.</string>
    <string name="warn_password_incorrect">Password was incorrect, Please try again.</string>
    <string name="sheetname_password">Password</string>

    <string-array name="khakhara_product">
        <item name="select_product">Select Product Name</item>
        <item name="Methi">Methi</item>
        <item name="Lasan">Lasan</item>
        <item name="Masala">Masala</item>
        <item name="Mangaroli">Mangaroli</item>
        <item name="Jeera">Jeera</item>
        <item name="Ghee">Ghee Jeera</item>
        <item name="Chevado">Chevado</item>
    </string-array>

    <string-array name="cookies_product">
        <item name="select_product">Select Product Name</item>
        <item name="Besan">Besan</item>
        <item name="Coconut">Coconut</item>
        <item name="Ginger">Ginger</item>
        <item name="Fruit N Nut">Fruit N Nut</item>
        <item name="Butter">Butter</item>
        <item name="Denish">Denish</item>
        <item name="Choco">Choco</item>
        <item name="chips">Choco chips</item>
    </string-array>

    <string-array name="spices_product">
        <item name="select_product">Select Product Name</item>
        <item name="Chilly">Chilly</item>
        <item name="Turmeric">Turmeric</item>
        <item name="Dhanajeeru">Dhanajeeru</item>
        <item name="Rai">Rai</item>
        <item name="Hing">Hing</item>
        <item name="Jeeru">Jeeru</item>
        <item name="Ajawain">Ajawain</item>
    </string-array>

    <string-array name="payment_method">
        <item name="select_product">Select Payment By Method</item>
        <item name="cash">Cash</item>
        <item name="cheque">Cheque</item>
        <item name="pending">Pending</item>
        <item name="sample">Sample</item>
    </string-array>

</resources>
