<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.UnitSelectionFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@mipmap/pidilite_splash" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please select your unit."
                android:textSize="@dimen/dimen20dp" />

            <RadioButton
                android:id="@+id/rbKhakhara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kahakhara_unit"
                android:textSize="@dimen/dimen15dp" />

            <RadioButton
                android:id="@+id/rbMasala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masala_unit"
                android:textSize="@dimen/dimen15dp" />

            <RadioButton
                android:id="@+id/rbBakery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bakery_unit"
                android:textSize="@dimen/dimen15dp" />
        </RadioGroup>


        <Button
            android:id="@+id/btnSubmitUnit"
            android:text="@string/strSubmitUnit"
            style="@style/button_style" />
    </LinearLayout>
</RelativeLayout>